tungns create feature upload image

--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "homepage": "https://github.com/tungns-dev/server-co_retract#readme",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
+    "imgbb-uploader": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
